--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <header>
 			<div class="bloque">
 				<div class="row" id="caja-header">
-					<div class="col-4">
+					<div class="col-sm-12 col-md-4">
 					<img src="images/logo.png" alt="" id="logo">
 					</div>
-					<div class="col-8" id="caja-nav">
+					<div class="col-sm-12 col-md-8" id="caja-nav">
 						<div class="container-fluid">
 							<nav class="navbar">
 							<a href="https://es.wikipedia.org/wiki/Pal%C3%ADndromo" class="menu-item" target="_blank">¿Qué son los Palíndromos?</a>
